phase3 V1-4 pass